# convform

./: .gitignore  Cargo.toml  README.md  _chatbot.db  admin_todo  app.py  appendix.json  bot_reply.py  botup.sh  chatbot_.db  cstatus.py  cvft.sh  cxd.md  data.txt  db_peek.py  exp.py  export_db.py  klomp.py  lch.py  notes.md  package-lock.json  playground_cstatus.py  playground_db.py  playground_json.py  playground_lch.py  playground_lch_result  pyproject.toml  registered_chains.py  requirements.in  requirements.txt  run.sh  smart_sub.py  structure.aux  structure.aux.blg  structure.run.xml  template_config.json  test.py  todo_smart  update_chain.sh  update_convfront.sh  (+3 more)
convform/: Cargo.toml  __init__.py  copy_item.py  edit_item.py  list_items.py  main.py  remove_item.py  rename_item.py  todo_edit
convform/bots/: bohumil.json  bohumil2.json  bohumil3_edited.json  bohumil_edited.json  vtipobot.json  vtipobot_edited.json  zvědavobot.json
convform/bots/csi/: csi6.json  csi7.json
convform/convform_dist/: convform-0.1.1-cp39-cp39-macosx_11_0_arm64.whl
convform/csi/: csi0.json  csi1.json  csi2.json  csi4.json  csi5.json
convform/src/: cnd_dbg.rs  flow.rs  lib.rs  main.rs
convform/src/c_status/: csi.rs  cso.rs  initiative.rs  matched_states_get.rs  response_states_get.rs
convform/src/flow/: c_status.rs  default.rs  validate.rs
convform/src/flow/c_status/: c_status_in.rs  c_status_out.rs
convform/src/flow/validate/: autoserialize.rs  empty_fields.rs  (+6 more)
convform/src/src/: c_status.rs  flow.rs  validate.rs
convform/src/validate/: helper_structs_validate.rs  state_intro_check.rs
convform_/: Cargo.toml  dumb_design4.txt  smart_design.txt
convform_/bots/: bohumil.json
convform_/bots/cso/: cso.json
convform_/src/: lib.rs
convform_/src/flow/: c_status.rs
(+3320 files in other folders)
