[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "chatbot pro diplomovou práci"
authors = ["Albert Maršík <albert.marsik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.5.0"
flask = "^2.3.1"
flask-sqlalchemy = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
