[package]
name = "cvf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "convform"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.97"
regex = "1.9.3"
linked_hash_set = "0.1.4"
rand = "0.8.5"
