[package]
name = "convform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.97"
itertools = "0.11.0"
serde_derive = "1.0.188"
regex = "1.9.3"
rand = "0.8.5"
pyo3 = { version = "0.19.0", features = ["extension-module"]}
linked_hash_set = "0.1.4"
