[package]
name = "convform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "convform"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.97"
regex = "1.9.3"
linked_hash_set = "0.1.4"
rand = "0.8.5"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
